--- a/style.css
+++ b/style.css
@@ -147,6 +147,10 @@ p {
 .section {
 	text-align: center;
 	padding: 50px;
+	margin: auto;
+}
+
+.section__container {
 	max-width: 1200px;
 	margin: auto;
 }
@@ -205,4 +209,54 @@ p {
 }
 .job__period {
 	font-size: var(--font-micro);
+}
+
+/* Skill */
+
+#skills {
+	background-color: var(--color-yellow);
+}
+
+.skillset {
+	color: var(--color-light-white);
+	display: flex;
+	background-color: var(--color-light-grey);
+	margin: 20px 0;
+}
+.skillset__title {
+	color: var(--color-white);
+}
+.skillset__left {
+	flex-basis: 60%;
+	background-color: var(--color-dark-grey);
+	padding: 20px 40px;
+}
+.skill {
+	margin-bottom: 32px;
+}
+.skill__description {
+	display: flex;
+	justify-content: space-between;
+}
+.skill__bar {
+	width: 100%;
+	height: 3px;
+	background-color: var(--color-grey);
+}
+.skill__value {
+	height: 3px;
+	background-color: var(--color-orange);
+}
+.skillset__right {
+	flex-basis: 40%;
+}
+.tools,
+.etc {
+	padding: 20px;
+}
+.tools {
+	background-color: var(--color-grey);
+}
+.etc {
+	background-color: var(--color-light-grey);
 }
