--- a/style.css
+++ b/style.css
@@ -307,6 +307,12 @@ p {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
+	opacity: 1;
+	transition: all var(--animation-duration) ease-out;
+}
+.work__projects.anim-out {
+	opacity: 0.6;
+	transform: scale(0.96) translateY(40px);
 }
 .project {
 	position: relative;
@@ -317,6 +323,9 @@ p {
 	height: 250px;
 	margin: 2px;
 	background-color: var(--color-light-white);
+}
+.project.invisible {
+	display: none;
 }
 .project__img {
 	max-width: 100%;
