JS: Navbar menu toggle + Project UI tweak

--- a/style.css
+++ b/style.css
@@ -101,15 +101,26 @@ p {
 }
 #navbar.navbar--dark {
 	background-color: var(--color-navbar);
-	opacity: 0.85;
+	opacity: 0.8;
 	padding: 8px;
 }
-.navbar__menu {
-	display: flex;
+#navbar.navbar--dark .navbar__toggle-btn {
+	top: 14px;
+}
+.navbar__toggle-btn {
+	position: absolute;
+	right: 32px;
+	top: 24px;
+	font-size: 24px;
+	color: var(--color-white);
+	display: none;
 }
 .navbar__logo {
 	font-size: var(--font-medium);
 	font-weight: var(--weight-semi-bold);
+}
+.navbar__menu {
+	display: flex;
 }
 .navbar__menu__item {
 	padding: 8px 12px;
@@ -118,18 +129,9 @@ p {
 	border: 1px solid transparent;
 	border-radius: var(--size-border-radius);
 }
-
 .navbar__menu__item:hover {
 	border-color: var(--color-white);
 	background-color: var(--color-dark-pink);
-}
-.navbar__toggle-btn {
-	position: absolute;
-	right: 32px;
-	top: 14px;
-	font-size: 24px;
-	color: var(--color-white);
-	display: none;
 }
 /* Home */
 #home {
@@ -350,16 +352,16 @@ p {
 	transform: translateY(0px);
 }
 .project__description h3 {
-	color: var(--color-white);
+	color: var(--color-orange);
 }
 .project__description h3:after {
 	content: "";
 	display: block;
 	position: relative;
 	left: 50%;
-	width: 25px;
+	width: 50px;
 	height: 2px;
-	margin-left: -12px;
+	transform: translateX(-50%);
 	margin-top: 8px;
 	background-color: var(--color-dark-white);
 }
@@ -443,15 +445,21 @@ p {
 	.navbar__toggle-btn {
 		display: block;
 	}
+
 	#navbar {
 		flex-direction: column;
 		align-items: flex-start;
+		background-color: var(--color-navbar);
+		opacity: 0.9;
 	}
 	.navbar__menu {
 		flex-direction: column;
 		text-align: center;
 		width: 100%;
 		display: none;
+	}
+	.navbar__menu.open {
+		display: block;
 	}
 	.about__majors {
 		flex-direction: column;
