CSS : Final Touch

--- a/style.css
+++ b/style.css
@@ -121,6 +121,7 @@ p {
 }
 .navbar__menu {
 	display: flex;
+	flex-direction: row;
 }
 .navbar__menu__item {
 	padding: 8px 12px;
@@ -159,6 +160,9 @@ p {
 	padding: 8px 12px;
 	border: 2px solid var(--color-white);
 	border-radius: var(--size-border-radius);
+}
+.home__contact:hover {
+	background-color: var(--color-orange);
 }
 
 /* Section common */
@@ -279,6 +283,7 @@ p {
 	border-radius: var(--size-border-radius);
 	font-size: var(--font-regular);
 	padding: 8px 48px;
+	position: relative;
 }
 .category__btn.selected,
 .category__btn:hover {
@@ -288,7 +293,7 @@ p {
 .category__btn.selected .category__count,
 .category__btn:hover .category__count {
 	opacity: 1;
-	top: 0;
+	top: 5px;
 }
 .category__count {
 	background-color: var(--color-orange);
@@ -298,9 +303,9 @@ p {
 	height: 24px;
 	line-height: 24px;
 	display: inline-block;
-	position: relative;
+	position: absolute;
 	top: -20px;
-	left: 4px;
+	right: 16px;
 	opacity: 0;
 	transition: all var(--animation-duration) ease-in;
 }
@@ -427,8 +432,8 @@ p {
 .arrow-up {
 	position: fixed;
 	z-index: 1;
-	top: 90vh;
-	left: 94vw;
+	bottom: 20px;
+	right: 20px;
 	transition: all var(--animation-duration) ease;
 	font-size: 50px;
 	color: var(--color-navbar);
@@ -442,8 +447,19 @@ p {
 }
 
 @media screen and (max-width: 768px) {
+	:root {
+		/* Font size */
+		--font-large: 30px;
+		--font-medium: 18px;
+		--font-regular: 16px;
+		--font-small: 14px;
+		--font-micro: 12px;
+	}
 	.navbar__toggle-btn {
 		display: block;
+		top: 16px;
+		right: 16px;
+		font-size: var(--font-medium);
 	}
 
 	#navbar {
@@ -461,11 +477,21 @@ p {
 	.navbar__menu.open {
 		display: block;
 	}
+	.section {
+		padding: 16px;
+		padding-top: 40px;
+	}
 	.about__majors {
 		flex-direction: column;
+		margin-top: 30px;
+		margin-bottom: 0px;
 	}
 	.major {
-		margin-bottom: 38px;
+		margin-bottom: 30px;
+	}
+	.category__btn {
+		margin: 4px 0;
+		width: 100%;
 	}
 	.skillset {
 		flex-direction: column;
@@ -473,8 +499,29 @@ p {
 	.project {
 		flex-grow: 1;
 	}
+	.testimonial {
+		flex-direction: column;
+		align-items: center;
+	}
 	.testimonial__avatar {
-		width: 80px;
-		height: 80px;
+		width: 100px;
+		height: 100px;
+	}
+	.testimonial__avatar:nth-child(even),
+	.testimonial__avatar:nth-child(odd) {
+		margin: 0;
+		margin-bottom: 10px;
+	}
+
+	.testimonial__speech-bubble {
+		order: 1;
+	}
+	.arrow-up {
+		width: 50px;
+		height: 50px;
+		font-size: 30px;
+		line-height: 50px;
+		right: 16px;
+		bottom: 16px;
 	}
 }
