--- a/style.css
+++ b/style.css
@@ -127,8 +127,10 @@ p {
 	padding: 8px 12px;
 	margin: 0 4px;
 	cursor: pointer;
-	border: 1px solid transparent;
 	border-radius: var(--size-border-radius);
+}
+.navbar__menu__item.active {
+	border: 1px solid var(--color-white);
 }
 .navbar__menu__item:hover {
 	border-color: var(--color-white);
