--- a/style.css
+++ b/style.css
@@ -1,530 +1,543 @@
 /* Global */
 :root {
-	/* Color */
-	--color-white: #ffffff;
-	--color-light-white: #eeeeee;
-	--color-dark-white: #bdbdbd;
-	--color-pink: #fe918d;
-	--color-dark-pink: #ff6863;
-	--color-dark-grey: #4d4d4d;
-	--color-grey: #616161;
-	--color-light-grey: #7c7979;
-	--color-blue: #73aace;
-	--color-dark-blue: #3b6dcd;
-	--color-yellow: #fff7d1;
-	--color-orange: #feb546;
-	--color-black: #000000;
-	--color-navbar: #084ac4;
+  /* Color */
+  --color-white: #ffffff;
+  --color-light-white: #eeeeee;
+  --color-dark-white: #bdbdbd;
+  --color-pink: #fe918d;
+  --color-dark-pink: #ff6863;
+  --color-dark-grey: #4d4d4d;
+  --color-grey: #616161;
+  --color-light-grey: #7c7979;
+  --color-blue: #73aace;
+  --color-dark-blue: #3b6dcd;
+  --color-yellow: #fff7d1;
+  --color-orange: #feb546;
+  --color-black: #000000;
+  --color-navbar: #084ac4;
 
-	/* Font size */
-	--font-large: 48px;
-	--font-medium: 28px;
-	--font-regular: 18px;
-	--font-small: 16px;
-	--font-micro: 14px;
+  /* Font size */
+  --font-large: 48px;
+  --font-medium: 28px;
+  --font-regular: 18px;
+  --font-small: 16px;
+  --font-micro: 14px;
 
-	/* Font weight */
-	--weight-bold: 700;
-	--weight-semi-bold: 600;
-	--weight-regular: 400;
+  /* Font weight */
+  --weight-bold: 700;
+  --weight-semi-bold: 600;
+  --weight-regular: 400;
 
-	/* Size */
-	--size-border-radius: 4px;
+  /* Size */
+  --size-border-radius: 4px;
 
-	/* Animation */
-	--animation-duration: 300ms;
+  /* Animation */
+  --animation-duration: 300ms;
 }
 
 /* Universal tags */
 * {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 body {
-	margin: 0;
-	font-family: "Open Sans", sans-serif;
-	cursor: default;
+  margin: 0;
+  font-family: "Open Sans", sans-serif;
+  cursor: default;
 }
 a {
-	text-decoration: none;
-	color: var(--color-white);
+  text-decoration: none;
+  color: var(--color-white);
 }
 ul {
-	padding-left: 0;
+  padding-left: 0;
 }
 li {
-	list-style: none;
+  list-style: none;
 }
 button {
-	background-color: transparent;
-	cursor: pointer;
-	border: none;
-	outline: none;
+  background-color: transparent;
+  cursor: pointer;
+  border: none;
+  outline: none;
 }
 
 /* Typography(header) */
 h1 {
-	font-size: var(--font-large);
-	font-weight: var(--weight-bold);
-	color: var(--color-black);
-	margin: 16px 0;
+  font-size: var(--font-large);
+  font-weight: var(--weight-bold);
+  color: var(--color-black);
+  margin: 16px 0;
 }
 h2 {
-	font-size: var(--font-medium);
-	font-weight: var(--weight-semi-bold);
-	color: var(--color-black);
-	margin: 8px 0;
+  font-size: var(--font-medium);
+  font-weight: var(--weight-semi-bold);
+  color: var(--color-black);
+  margin: 8px 0;
 }
 h3 {
-	font-size: var(--font-regular);
-	font-weight: var(--font-regular);
-	color: var(--color-black);
-	margin: 8px 0;
+  font-size: var(--font-regular);
+  font-weight: var(--font-regular);
+  color: var(--color-black);
+  margin: 8px 0;
 }
 p {
-	font-size: var(--font-regular);
-	font-weight: var(--font-regular);
-	color: var(--color-black);
-	margin: 4px 0;
+  font-size: var(--font-regular);
+  font-weight: var(--font-regular);
+  color: var(--color-black);
+  margin: 4px 0;
 }
 
 /* Navbar */
 #navbar {
-	position: fixed;
-	width: 100%;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	background-color: transparent;
-	color: var(--color-white);
-	padding: 8px;
-	transition: all var(--animation-duration) ease-in-out;
-	z-index: 1;
+  position: fixed;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: transparent;
+  color: var(--color-white);
+  padding: 8px;
+  transition: all var(--animation-duration) ease-in-out;
+  z-index: 1;
 }
 #navbar.navbar--dark {
-	background-color: var(--color-navbar);
-	opacity: 0.8;
-	padding: 8px;
+  background-color: var(--color-navbar);
+  opacity: 0.8;
+  padding: 8px;
 }
 #navbar.navbar--dark .navbar__toggle-btn {
-	top: 10px;
+  top: 10px;
 }
 .navbar__toggle-btn {
-	position: absolute;
-	right: 32px;
-	top: 24px;
-	font-size: 24px;
-	color: var(--color-white);
-	display: none;
+  position: absolute;
+  right: 32px;
+  top: 24px;
+  font-size: 24px;
+  color: var(--color-white);
+  display: none;
 }
 .navbar__logo {
-	font-size: var(--font-medium);
-	font-weight: var(--weight-semi-bold);
+  font-size: var(--font-medium);
+  font-weight: var(--weight-semi-bold);
 }
 .navbar__menu {
-	display: flex;
-	flex-direction: row;
+  display: flex;
+  flex-direction: row;
 }
 .navbar__menu__item {
-	padding: 8px 12px;
-	margin: 0 4px;
-	cursor: pointer;
-	border-radius: var(--size-border-radius);
+  padding: 8px 12px;
+  margin: 0 4px;
+  cursor: pointer;
+  border-radius: var(--size-border-radius);
 }
 .navbar__menu__item.active {
-	border: 1px solid var(--color-white);
+  border: 1px solid var(--color-white);
 }
 .navbar__menu__item:hover {
-	border-color: var(--color-white);
-	background-color: var(--color-orange);
+  border-color: var(--color-white);
+  background-color: var(--color-orange);
 }
 /* Home */
 #home {
-	background: url("imgs/home-background.png.png") center/cover no-repeat;
-	padding: 40px;
-	padding-top: 120px;
-	text-align: center;
+  background: url("imgs/home-background.png.png") center/cover no-repeat;
+  padding: 40px;
+  padding-top: 120px;
+  text-align: center;
 }
 
 .home__avatar {
-	width: 200px;
-	height: 250px;
-	border-radius: 50%;
-	border: 2px solid var(--color-light-white);
+  width: 200px;
+  height: 250px;
+  border-radius: 50%;
+  border: 2px solid var(--color-light-white);
 }
 .home__title,
 .home__description {
-	color: var(--color-white);
+  color: var(--color-white);
 }
 .home__contact {
-	color: var(--color-white);
-	font-size: var(--font-regular);
-	font-weight: var(--weight-bold);
-	margin: 24px;
-	padding: 8px 12px;
-	border: 2px solid var(--color-white);
-	border-radius: var(--size-border-radius);
+  color: var(--color-white);
+  font-size: var(--font-regular);
+  font-weight: var(--weight-bold);
+  margin: 24px;
+  padding: 8px 12px;
+  border: 2px solid var(--color-white);
+  border-radius: var(--size-border-radius);
 }
 .home__contact:hover {
-	background-color: var(--color-orange);
+  background-color: var(--color-orange);
 }
 
 /* Section common */
 .section {
-	text-align: center;
-	padding: 90px;
-	margin: auto;
+  text-align: center;
+  padding: 90px;
+  margin: auto;
 }
 .section__container {
-	max-width: 1200px;
-	margin: auto;
+  max-width: 1200px;
+  margin: auto;
 }
 
 /* About */
 .about__majors {
-	display: flex;
-	justify-content: space-between;
-	margin: 80px 0;
+  display: flex;
+  justify-content: space-between;
+  margin: 80px 0;
 }
 .major__icon {
-	width: 170px;
-	height: 170px;
-	font-size: 70px;
-	line-height: 170px;
-	margin: auto;
-	border: 1px solid var(--color-blue);
-	border-radius: 50%;
-	margin-bottom: 16px;
-	color: var(--color-blue);
+  position: relative;
+  width: 170px;
+  height: 170px;
+  font-size: 70px;
+  line-height: 170px;
+  margin: auto;
+  border: 1px solid var(--color-blue);
+  border-radius: 50%;
+  margin-bottom: 16px;
+  color: var(--color-blue);
 }
-.major__icon i {
-	transition: all var(--animation-duration) ease;
+.major__icon svg {
+  position: absolute;
+  top: 45px;
+  right: 45px;
 }
-.major__icon:hover i {
-	color: var(--color-pink);
-	transform: rotate(-30deg) scale(1.3);
+.major__icon i,
+.major__icon svg {
+  transition: all var(--animation-duration) ease;
+}
+.major__icon:hover i,
+.major__icon:hover svg {
+  color: var(--color-pink);
+  transform: rotate(-30deg) scale(1.3);
 }
 .major__title,
 .major__description {
-	color: var(--color-dark-grey);
+  color: var(--color-dark-grey);
 }
 .major__description {
-	font-size: var(--font-small);
+  font-size: var(--font-small);
 }
 .job {
-	display: flex;
-	align-items: center;
+  display: flex;
+  align-items: center;
 }
 .job__description {
-	margin: 0 16px;
-	text-align: left;
+  margin: 0 16px;
+  text-align: left;
 }
 .job__name,
 .job__period {
-	color: var(--color-light-grey);
+  color: var(--color-light-grey);
 }
 .job__name {
-	font-size: var(--font-small);
+  font-size: var(--font-small);
+}
+.job__detail {
+  font-size: var(--font-micro);
 }
 .job__period {
-	font-size: var(--font-micro);
+  font-size: var(--font-micro);
 }
 
 /* Skill */
 #skills {
-	background-color: var(--color-yellow);
+  background-color: var(--color-yellow);
 }
 .skillset {
-	color: var(--color-light-white);
-	display: flex;
-	background-color: var(--color-light-grey);
-	margin: 20px 0;
+  color: var(--color-light-white);
+  display: flex;
+  background-color: var(--color-light-grey);
+  margin: 20px 0;
 }
 .skillset__title {
-	color: var(--color-white);
+  color: var(--color-white);
 }
 .skillset__left {
-	flex-basis: 60%;
-	background-color: var(--color-dark-grey);
-	padding: 20px 40px;
+  flex-basis: 60%;
+  background-color: var(--color-dark-grey);
+  padding: 20px 40px;
 }
 .skill {
-	margin-bottom: 32px;
+  margin-bottom: 32px;
 }
 .skill__description {
-	display: flex;
-	justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 .skill__bar {
-	width: 100%;
-	height: 3px;
-	background-color: var(--color-grey);
+  width: 100%;
+  height: 3px;
+  background-color: var(--color-grey);
 }
 .skill__value {
-	height: 3px;
-	background-color: var(--color-orange);
+  height: 3px;
+  background-color: var(--color-orange);
 }
 .skillset__right {
-	flex-basis: 40%;
+  flex-basis: 40%;
 }
 .tools {
-	background-color: var(--color-grey);
+  background-color: var(--color-grey);
 }
 .tools,
 .etc {
-	padding: 20px;
+  padding: 20px;
 }
 .etc {
-	background-color: var(--color-light-grey);
+  background-color: var(--color-light-grey);
 }
 
 /* Work */
 .work__categories {
-	margin: 40px;
+  margin: 40px;
 }
 .category__btn {
-	border: 1px solid var(--color-dark-white);
-	border-radius: var(--size-border-radius);
-	font-size: var(--font-regular);
-	padding: 8px 48px;
-	position: relative;
+  border: 1px solid var(--color-dark-white);
+  border-radius: var(--size-border-radius);
+  font-size: var(--font-regular);
+  padding: 8px 48px;
+  position: relative;
 }
 .category__btn.selected,
 .category__btn:hover {
-	background-color: var(--color-blue);
-	color: var(--color-white);
+  background-color: var(--color-blue);
+  color: var(--color-white);
 }
 .category__btn.selected .category__count,
 .category__btn:hover .category__count {
-	opacity: 1;
-	top: 6px;
+  opacity: 1;
+  top: 6px;
 }
 .category__count {
-	background-color: var(--color-orange);
-	border-radius: 50%;
-	color: var(--color-white);
-	width: 24px;
-	height: 24px;
-	line-height: 24px;
-	display: inline-block;
-	position: absolute;
-	top: -20px;
-	right: 16px;
-	opacity: 0;
-	transition: all var(--animation-duration) ease-in;
+  background-color: var(--color-orange);
+  border-radius: 50%;
+  color: var(--color-white);
+  width: 24px;
+  height: 24px;
+  line-height: 24px;
+  display: inline-block;
+  position: absolute;
+  top: -20px;
+  right: 16px;
+  opacity: 0;
+  transition: all var(--animation-duration) ease-in;
 }
 .work__projects {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: center;
-	opacity: 1;
-	transition: all var(--animation-duration) ease-out;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  opacity: 1;
+  transition: all var(--animation-duration) ease-out;
 }
 .work__projects.anim-out {
-	opacity: 0.6;
-	transform: scale(0.96) translateY(40px);
+  opacity: 0.6;
+  transform: scale(0.96) translateY(40px);
 }
 .project {
-	position: relative;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	width: 280px;
-	height: 250px;
-	margin: 2px;
-	background-color: var(--color-light-white);
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 280px;
+  height: 250px;
+  margin: 2px;
+  background-color: var(--color-light-white);
 }
 .project.invisible {
-	display: none;
+  display: none;
 }
 .project__img {
-	max-width: 100%;
-	max-height: 100%;
-	align-self: center;
+  max-width: 100%;
+  max-height: 100%;
+  align-self: center;
 }
 .project__description {
-	position: absolute;
-	background-color: black;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	width: 100%;
-	height: 100%;
-	top: 0;
-	left: 0;
-	opacity: 0;
-	transform: translateY(10px);
-	transition: all var(--animation-duration) ease-in;
+  position: absolute;
+  background-color: black;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  transform: translateY(10px);
+  transition: all var(--animation-duration) ease-in;
 }
 .project:hover .project__description {
-	opacity: 0.8;
-	transform: translateY(0px);
+  opacity: 0.8;
+  transform: translateY(0px);
 }
 .project__description h3 {
-	color: var(--color-orange);
+  color: var(--color-orange);
 }
 .project__description h3:after {
-	content: "";
-	display: block;
-	position: relative;
-	left: 50%;
-	width: 50px;
-	height: 2px;
-	transform: translateX(-50%);
-	margin-top: 8px;
-	background-color: var(--color-dark-white);
+  content: "";
+  display: block;
+  position: relative;
+  left: 50%;
+  width: 50px;
+  height: 2px;
+  transform: translateX(-50%);
+  margin-top: 8px;
+  background-color: var(--color-dark-white);
 }
 
 /* Testimonial */
 #testimonials {
-	background-color: var(--color-light-white);
+  background-color: var(--color-light-white);
 }
 .testimonials {
-	margin: 40px;
+  margin: 40px;
 }
 .testimonial {
-	display: flex;
-	margin: 32px 0;
+  display: flex;
+  margin: 32px 0;
 }
 .testimonial__avatar {
-	width: 150px;
-	height: 150px;
-	border-radius: 50%;
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
 }
 .testimonial__avatar:nth-child(odd) {
-	margin-right: 40px;
+  margin-right: 40px;
 }
 .testimonial__avatar:nth-child(even) {
-	margin-left: 40px;
+  margin-left: 40px;
 }
 .testimonial__speech-bubble {
-	padding: 18px;
-	background-color: var(--color-white);
-	border-radius: var(--size-border-radius);
+  padding: 18px;
+  background-color: var(--color-white);
+  border-radius: var(--size-border-radius);
 }
 .testimonial__speech-bubble p {
-	color: var(--color-light-grey);
+  color: var(--color-light-grey);
 }
 .testimonial__speech-bubble a {
-	color: var(--color-pink);
+  color: var(--color-pink);
 }
 
 /* Contact */
 #contact {
-	background-color: var(--color-dark-blue);
+  background-color: var(--color-dark-blue);
 }
 .contact__title,
 .contact__email,
 .contact__rights {
-	color: var(--color-white);
+  color: var(--color-white);
 }
 .contact__title {
-	margin: 32px 0;
+  margin: 32px 0;
 }
 .contact__links {
-	font-size: var(--font-large);
-	margin: 24px 0;
+  font-size: var(--font-large);
+  margin: 24px 0;
 }
-.contact__links i {
-	transition: all calc(var(--animation-duration) / 2) ease-in;
+.contact__links i,
+.contact__links #notion {
+  transition: all calc(var(--animation-duration) / 2) ease-in;
 }
-.contact__links i:hover {
-	transform: scale(1.2);
-	color: var(--color-yellow);
+.contact__links i:hover,
+.contact__links #notion:hover {
+  transform: scale(1.2);
+  color: var(--color-yellow);
 }
 /* Scroll */
 .arrow-up {
-	position: fixed;
-	z-index: 1;
-	bottom: 20px;
-	right: 20px;
-	transition: all var(--animation-duration) ease;
-	font-size: 50px;
-	color: var(--color-orange);
-	opacity: 0;
-	pointer-events: none;
-	transition: opacity 300ms ease-in;
+  position: fixed;
+  z-index: 1;
+  bottom: 20px;
+  right: 20px;
+  transition: all var(--animation-duration) ease;
+  font-size: 50px;
+  color: var(--color-orange);
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 300ms ease-in;
 }
 .arrow-up.visible {
-	opacity: 1;
-	pointer-events: auto;
+  opacity: 1;
+  pointer-events: auto;
 }
 
 @media screen and (max-width: 768px) {
-	:root {
-		/* Font size */
-		--font-large: 30px;
-		--font-medium: 18px;
-		--font-regular: 16px;
-		--font-small: 14px;
-		--font-micro: 12px;
-	}
-	.navbar__toggle-btn {
-		display: block;
-		top: 10px;
-		right: 16px;
-		font-size: var(--font-medium);
-	}
+  :root {
+    /* Font size */
+    --font-large: 30px;
+    --font-medium: 18px;
+    --font-regular: 16px;
+    --font-small: 14px;
+    --font-micro: 12px;
+  }
+  .navbar__toggle-btn {
+    display: block;
+    top: 10px;
+    right: 16px;
+    font-size: var(--font-medium);
+  }
 
-	#navbar {
-		flex-direction: column;
-		align-items: flex-start;
-		background-color: var(--color-navbar);
-		opacity: 0.9;
-	}
-	.navbar__menu {
-		flex-direction: column;
-		text-align: center;
-		width: 100%;
-		display: none;
-	}
-	.navbar__menu.open {
-		display: block;
-	}
-	.section {
-		padding: 16px;
-		padding-top: 40px;
-	}
-	.about__majors {
-		flex-direction: column;
-		margin-top: 30px;
-		margin-bottom: 0px;
-	}
-	.major {
-		margin-bottom: 30px;
-	}
-	.category__btn {
-		margin: 4px 0;
-		width: 100%;
-	}
-	.skillset {
-		flex-direction: column;
-	}
-	.project {
-		flex-grow: 1;
-	}
-	.testimonial {
-		flex-direction: column;
-		align-items: center;
-	}
-	.testimonial__avatar {
-		width: 100px;
-		height: 100px;
-	}
-	.testimonial__avatar:nth-child(even),
-	.testimonial__avatar:nth-child(odd) {
-		margin: 0;
-		margin-bottom: 10px;
-	}
+  #navbar {
+    flex-direction: column;
+    align-items: flex-start;
+    background-color: var(--color-navbar);
+    opacity: 0.9;
+  }
+  .navbar__menu {
+    flex-direction: column;
+    text-align: center;
+    width: 100%;
+    display: none;
+  }
+  .navbar__menu.open {
+    display: block;
+  }
+  .section {
+    padding: 16px;
+    padding-top: 40px;
+  }
+  .about__majors {
+    flex-direction: column;
+    margin-top: 30px;
+    margin-bottom: 0px;
+  }
+  .major {
+    margin-bottom: 30px;
+  }
+  .category__btn {
+    margin: 4px 0;
+    width: 100%;
+  }
+  .skillset {
+    flex-direction: column;
+  }
+  .project {
+    flex-grow: 1;
+  }
+  .testimonial {
+    flex-direction: column;
+    align-items: center;
+  }
+  .testimonial__avatar {
+    width: 100px;
+    height: 100px;
+  }
+  .testimonial__avatar:nth-child(even),
+  .testimonial__avatar:nth-child(odd) {
+    margin: 0;
+    margin-bottom: 10px;
+  }
 
-	.testimonial__speech-bubble {
-		order: 1;
-	}
-	.arrow-up {
-		width: 50px;
-		height: 50px;
-		font-size: 30px;
-		line-height: 50px;
-		right: 16px;
-		bottom: 16px;
-	}
+  .testimonial__speech-bubble {
+    order: 1;
+  }
+  .arrow-up {
+    width: 50px;
+    height: 50px;
+    font-size: 30px;
+    line-height: 50px;
+    right: 16px;
+    bottom: 16px;
+  }
 }
